--- a/src/chords.html
+++ b/src/chords.html
@@ -10,11 +10,15 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>Worship for everyone</title>
+    <title>Guitar chords</title>
 </head>
 
 <body id="sc-bar">
-    //= components/banner.html
+    <section class="donate">
+        //= components/header.html
+        
+        //= components/footer.html
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="https://www.youtube.com/iframe_api"></script>
