--- a/src/collections.html
+++ b/src/collections.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>Guitar chords</title>
+    <title>Collections of songs</title>
 </head>
 
-<body id="sc-bar">
-    <section class="donate">
-        //= components/header.html
-        
-        //= components/footer.html
-    </section>
+<body>
+    <div class="black__header">
+    //= components/header.html
+    </div>
+    //= components/collections-content.html
+    
+    <div class="black__footer">
+    //= components/footer.html
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script type="text/javascript" src="https://www.youtube.com/iframe_api"></script>
     <script src="js/main.js"></script>
 </body>
 
